- New catalog API exceptions
 - Catalog API exceptions now wrapped in GenericApiResponse

 - Status code from GenericApiResponse