@@ -1,16 +1,32 @@
 package it.eng.catalog.util;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import it.eng.catalog.model.*;
-import it.eng.catalog.serializer.Serializer;
-
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.Set;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+
+import it.eng.catalog.model.Action;
+import it.eng.catalog.model.Catalog;
+import it.eng.catalog.model.CatalogError;
+import it.eng.catalog.model.CatalogRequestMessage;
+import it.eng.catalog.model.Constraint;
+import it.eng.catalog.model.DataService;
+import it.eng.catalog.model.Dataset;
+import it.eng.catalog.model.DatasetRequestMessage;
+import it.eng.catalog.model.Distribution;
+import it.eng.catalog.model.LeftOperand;
+import it.eng.catalog.model.Multilanguage;
+import it.eng.catalog.model.Offer;
+import it.eng.catalog.model.Operator;
+import it.eng.catalog.model.Permission;
+import it.eng.catalog.serializer.Serializer;
 
 public class MockObjectUtil {
 
@@ -47,74 +63,74 @@ public class MockObjectUtil {
 
     public static final Permission PERMISSION = Permission.Builder.newInstance()
             .action(Action.USE)
-            .constraint(Set.of(CONSTRAINT))
+            .constraint(new HashSet<Constraint>(Arrays.asList(CONSTRAINT)))
             .build();
     
     public static final Permission PERMISSION_ANONYMIZE = Permission.Builder.newInstance()
             .action(Action.ANONYMIZE)
-            .constraint(Set.of(CONSTRAINT_COUNT_5_TIMES))
+            .constraint(new HashSet<Constraint>(Arrays.asList(CONSTRAINT_COUNT_5_TIMES)))
             .build();
 
     public static final Offer OFFER = Offer.Builder.newInstance()
     		.id("urn:offer_id")
 //            .target(TARGET)
-            .permission(Set.of(PERMISSION))
+            .permission(new HashSet<Permission>(Arrays.asList(PERMISSION)))
             .build();
     
     public static final Offer OFFER_WITH_TARGET = Offer.Builder.newInstance()
     		.id("urn:offer_id")
             .target(TARGET)
-            .permission(Set.of(PERMISSION))
+            .permission(new HashSet<Permission>(Arrays.asList(PERMISSION)))
             .build();
 
     public static final Distribution DISTRIBUTION = Distribution.Builder.newInstance()
-            .title(MockObjectUtil.TITLE)
-            .description(Set.of(MockObjectUtil.MULTILANGUAGE))
-            .issued(MockObjectUtil.ISSUED)
-            .modified(MockObjectUtil.MODIFIED)
-            .hasPolicy(Set.of(MockObjectUtil.OFFER))
-            .accessService(Set.of(DataServiceUtil.DATA_SERVICE))
+            .title(TITLE)
+            .description(Arrays.asList(MULTILANGUAGE))
+            .issued(ISSUED)
+            .modified(MODIFIED)
+            .hasPolicy(Arrays.asList(OFFER))
+            .accessService(Arrays.asList(DataServiceUtil.DATA_SERVICE))
             .build();
 
     public static final Distribution DISTRIBUTION_FOR_UPDATE = Distribution.Builder.newInstance()
-            .title(MockObjectUtil.TITLE)
-            .description(Set.of(MockObjectUtil.MULTILANGUAGE))
-            .issued(MockObjectUtil.ISSUED)
-            .modified(MockObjectUtil.MODIFIED)
-            .hasPolicy(Set.of(MockObjectUtil.OFFER))
-            .accessService(Set.of(DataServiceUtil.DATA_SERVICE))
+            .title(TITLE)
+            .description(Arrays.asList(MULTILANGUAGE))
+            .issued(ISSUED)
+            .modified(MODIFIED)
+            .hasPolicy(Arrays.asList(OFFER))
+            .accessService(Arrays.asList(DataServiceUtil.DATA_SERVICE))
             .version(0L)
             .createdBy("admin@mail.com")
             .lastModifiedBy("admin@mail.com")
             .build();
 
-    public static final Collection<Distribution> DISTRIBUTIONS = Set.of(DISTRIBUTION);
+    public static final Collection<Distribution> DISTRIBUTIONS = Arrays.asList(DISTRIBUTION);
     public static final Dataset DATASET = Dataset.Builder.newInstance()
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .distribution(Set.of(DISTRIBUTION))
-            .description(Set.of(MULTILANGUAGE))
+            .distribution(Arrays.asList(DISTRIBUTION))
+            .description(Arrays.asList(MULTILANGUAGE))
             .issued(ISSUED)
-            .keyword(Set.of("keyword1", "keyword2"))
+            .keyword(Arrays.asList("keyword1", "keyword2"))
             .identifier(IDENTIFIER)
             .modified(MODIFIED)
-            .theme(Set.of("white", "blue", "aqua"))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .title(TITLE)
-            .hasPolicy(Set.of(OFFER))
+            .hasPolicy(new HashSet<Offer>(Arrays.asList(OFFER)))
             .build();
 
     public static final Dataset DATASET_FOR_UPDATE = Dataset.Builder.newInstance()
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .distribution(Set.of(DISTRIBUTION))
-            .description(Set.of(MULTILANGUAGE))
+            .distribution(Arrays.asList(DISTRIBUTION))
+            .description(Arrays.asList(MULTILANGUAGE))
             .issued(ISSUED)
-            .keyword(Set.of("keyword1", "keyword2"))
+            .keyword(Arrays.asList("keyword1", "keyword2"))
             .identifier(IDENTIFIER)
             .modified(MODIFIED)
-            .theme(Set.of("white", "blue", "aqua"))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .title(TITLE)
-            .hasPolicy(Set.of(OFFER))
+            .hasPolicy(new HashSet<Offer>(Arrays.asList(OFFER)))
             .version(0L)
             .createdBy("admin@mail.com")
             .lastModifiedBy("admin@mail.com")
@@ -123,38 +139,38 @@ public class MockObjectUtil {
             .build();
 
 
-    public static final Collection<Dataset> DATASETS = Set.of(DATASET);
+    public static final Collection<Dataset> DATASETS = Arrays.asList(DATASET);
     public static final Catalog CATALOG = Catalog.Builder.newInstance()
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .description(Set.of(Multilanguage.Builder.newInstance().language("en").value("Catalog description").build()))
+            .description(Arrays.asList(Multilanguage.Builder.newInstance().language("en").value("Catalog description").build()))
             .identifier(IDENTIFIER)
             .issued(ISSUED)
-            .keyword(Set.of("keyword1", "keyword2"))
+            .keyword(new HashSet<String>(Arrays.asList("keyword1", "keyword2")))
             .modified(MODIFIED)
-            .theme(Set.of("white", "blue", "aqua"))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .title(TITLE)
             .participantId("urn:example:DataProviderA")
-            .service(Set.of(DataServiceUtil.DATA_SERVICE))
-            .dataset(Set.of(DATASET))
-            .distribution(Set.of(DISTRIBUTION))
-            .hasPolicy(Set.of(OFFER))
+            .service(Arrays.asList(DataServiceUtil.DATA_SERVICE))
+            .dataset(Arrays.asList(DATASET))
+            .distribution(Arrays.asList(DISTRIBUTION))
+            .hasPolicy(Arrays.asList(OFFER))
             .homepage(ENDPOINT_URL)
             .build();
 
     public static final Catalog CATALOG_FOR_UPDATE = Catalog.Builder.newInstance()
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .description(Set.of(Multilanguage.Builder.newInstance().language("en").value("Catalog description").build()))
+            .description(Arrays.asList(Multilanguage.Builder.newInstance().language("en").value("Catalog description").build()))
             .identifier(IDENTIFIER)
-            .keyword(Set.of("keyword1", "keyword2"))
-            .theme(Set.of("white", "blue", "aqua"))
+            .keyword(new HashSet<String>(Arrays.asList("keyword1", "keyword2")))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .title(TITLE)
             .participantId("urn:example:DataProviderA")
-            .service(Set.of(DataServiceUtil.DATA_SERVICE))
-            .dataset(Set.of(DATASET))
-            .distribution(Set.of(DISTRIBUTION))
-            .hasPolicy(Set.of(OFFER))
+            .service(Arrays.asList(DataServiceUtil.DATA_SERVICE))
+            .dataset(Arrays.asList(DATASET))
+            .distribution(Arrays.asList(DISTRIBUTION))
+            .hasPolicy(Arrays.asList(OFFER))
             .homepage(ENDPOINT_URL)
             .version(0L)
             .createdBy("admin@mail.com")
@@ -169,18 +185,18 @@ public class MockObjectUtil {
             .filter(List.of("some-filter"))
             .build();
 
-    public static final Collection<Catalog> CATALOGS = Set.of(CATALOG);
+    public static final Collection<Catalog> CATALOGS = Arrays.asList(CATALOG);
 
     public static final DatasetRequestMessage DATASET_REQUEST_MESSAGE = DatasetRequestMessage.Builder.newInstance()
-            .dataset(Serializer.serializeProtocol(MockObjectUtil.DATASET))
+            .dataset(Serializer.serializeProtocol(DATASET))
             .build();
 
     public static final DataService DATA_SERVICE = DataService.Builder.newInstance()
-            .keyword(Set.of("keyword1", "keyword2"))
-            .theme(Set.of("white", "blue", "aqua"))
+            .keyword(Arrays.asList("keyword1", "keyword2"))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .description(Set.of(MULTILANGUAGE))
+            .description(Arrays.asList(MULTILANGUAGE))
             .identifier(IDENTIFIER)
             .issued(ISSUED)
             .modified(MODIFIED)
@@ -191,11 +207,11 @@ public class MockObjectUtil {
             .build();
 
     public static final DataService DATA_SERVICE_FOR_UPDATE = DataService.Builder.newInstance()
-            .keyword(Set.of("keyword1", "keyword2"))
-            .theme(Set.of("white", "blue", "aqua"))
+            .keyword(Arrays.asList("keyword1", "keyword2"))
+            .theme(Arrays.asList("white", "blue", "aqua"))
             .conformsTo(CONFORMSTO)
             .creator(CREATOR)
-            .description(Set.of(MULTILANGUAGE))
+            .description(Arrays.asList(MULTILANGUAGE))
             .identifier(IDENTIFIER)
             .issued(ISSUED)
             .modified(MODIFIED)
@@ -208,7 +224,7 @@ public class MockObjectUtil {
             .lastModifiedBy("admin@mail.com")
             .build();
 
-    public static final Collection<DataService> DATA_SERVICES = Set.of(DATA_SERVICE);
+    public static final Collection<DataService> DATA_SERVICES = Arrays.asList(DATA_SERVICE);
 
 
     public static void getAllKeysUsingJsonNodeFieldNames(JsonNode jsonNode, Set<String> keys) {
